--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "paypal-rest-sdk": "^1.7.1",
     "pg": "^4.5.5",
     "react": "^15.3.2",
     "react-contenteditable": "^2.0.1",
