--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.3",
     "express-session": "^1.14.1",
     "font-awesome": "^4.6.3",
+    "https": "^1.0.0",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
     "morgan": "^1.6.1",
